      for branches. This is now fixed and a test added to prevent it
      reoccuring. (Robert Collins, Andrew Bennetts)

    * Restore the progress bar on Windows. We were disabling it when TERM
      wasn't set, but Windows doesn't set TERM. (Alexander Belchenko)

    * ``setup.py build_ext`` now gives a proper error when an extension
      fails to build. (John Arbash Meinel)

    * Under rare circumstances (aka nobody reported a bug about it), the ftp
      transport could revert to ascii mode. It now stays in binary mode except
      when needed.
      (Vincent Ladeuil)

    * Make ``bzr push --quiet <non-local location>`` less chatty.
      (Kent Gibson, #221461)

  DOCUMENTATION:

    * Added ``Organizing your workspace`` to the User Guide appendices,
      summarizing some common ways of organizing trees, branches and
      repositories and the processes/workflows implied/enabled by each.
      (Ian Clatworthy)

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

    * ``bzr selftest`` now fails if the bazaar sources contain trailing
      whitespace, non-unix style line endings and files not ending in a
      newline. About 372 files and 3243 lines with trailing whitespace was
      updated to comply with this. The code already complied with the other
      criteria, but now it is enforced. (Marius Kruger)

    * ``Branch.fetch`` and ``Repository.fetch`` now return None rather
      than a count of copied revisions and failed revisions. A while back
      we stopped ever reporting failed revisions because we started
      erroring instead, and the copied revisions count is not used in the
      UI at all - indeed it only reflects the repository status not
      changes to the branch itself. (Robert Collins)

    * MutableTree.commit now favours the "authors" argument, with the old
      "author" argument being deprecated.

    * Remove deprecated EmptyTree.  (Martin Pool)
