@@ -52,6 +52,19 @@ class TestPathContentSummary(TestCaseWithTree):
         summary = self._convert_tree(tree).path_content_summary(u'\u03b2-path')
         self.assertEqual(('symlink', None, None, 'target'), summary)
 
+    def test_unicode_symlink_target_summary(self):
+        self.requireFeature(SymlinkFeature)
+        tree = self.make_branch_and_tree('tree')
+        try:
+            os.symlink(u'tree/\u03b2-path'.encode(_fs_enc), 'tree/link')
+        except UnicodeError:
+            raise TestSkipped(
+                'This platform does not support unicode file paths.')
+
+        tree.add(['link'])
+        summary = self._convert_tree(tree).path_content_summary('link')
+        self.assertEqual(('symlink', None, None, u'tree/\u03b2-path'), summary)
+
     def test_missing_content_summary(self):
         tree = self.make_branch_and_tree('tree')
         summary = self._convert_tree(tree).path_content_summary('path')
