@@ -117,6 +117,9 @@ IN DEVELOPMENT
     * ``setup.py build_ext`` now gives a proper error when an extension
       fails to build. (John Arbash Meinel)
 
+    * Symlinks to non ascii file names are now supported.
+      (Robert Collins, Vincent Ladeuil, #339055, #277444)    
+
     * Under rare circumstances (aka nobody reported a bug about it), the ftp
       transport could revert to ascii mode. It now stays in binary mode except
       when needed.
